--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <h1>People Entered: </h1>
     <h2 id="count-el">0</h2>
-    <button id="incButton" onclick="increment()">Increment</button>
+    <button id="incButton" class="allButton" onclick="increment()">Increment</button>
+    <button id="saveButton" class="allButton" onclick="save()">Save</button>
+    <p id="save-el">Previous Enter: </p>
 
 
 
